[tool.poetry]
name = "sentry-pymongo"
version = "0.1.0"
description = "Sentry integration for pymongo"
authors = ["ringsaturn <ringsaturn.me@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^4.0.1"
sentry_sdk = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
